# niven_number_counting

./: CMakeLists.txt
mpi/: mpi.cpp
openmp/: openMP.cpp
sequential/: main.cpp
